service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-service

spec:
  selector:
    app: employee-app

  ports:
  - port: 80
    targetPort: 8080

  type: LoadBalancer
